--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "DISPLAY=\"${DISPLAY:=:0}\" ./node_modules/.bin/electron js/electron.js",
 		"server": "node ./serveronly",
+		"server:dev": "nodemon -w ./js -w ./css -w ./modules -w ./config -w ./vendor --ext js,json,html,css serveronly/index.js",
 		"install": "echo \"Installing vendor files ...\n\" && cd vendor && npm install --loglevel=error",
 		"install-fonts": "echo \"Installing fonts ...\n\" && cd fonts && npm install --loglevel=error",
 		"postinstall": "npm run install-fonts && echo \"MagicMirror installation finished successfully! \n\"",
@@ -54,6 +55,7 @@
 		"mocha": "^7.1.2",
 		"mocha-each": "^2.0.1",
 		"mocha-logger": "^1.0.6",
+		"nodemon": "^2.0.4",
 		"prettier": "^2.0.5",
 		"pretty-quick": "^2.0.1",
 		"spectron": "^8.0.0",
@@ -75,7 +77,7 @@
 		"helmet": "^3.21.2",
 		"ical": "^0.8.0",
 		"iconv-lite": "latest",
-		"lodash": "^4.17.15",
+		"lodash": "^4.17.20",
 		"module-alias": "^2.2.2",
 		"moment": "latest",
 		"request": "^2.88.2",
